# simpleUnpacker

./: CMakeLists.txt  README.md
headers/: DispatcherHat.h  MyApplicationGui.h  SevenZipExtractor.h
source/: DispatcherHat.cpp  MyApplicationGui.cpp  SevenZipExtractor.cpp
src/: main.cpp
